--- a/index.html
+++ b/index.html
@@ -346,10 +346,20 @@
         <!-- About Section Content-->
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="pre-wrap lead"></p>
+            <p class="pre-wrap lead">
+              I've always loved and been passionate about technology, especially
+              it's ability to spread information and build accessibility for
+              people who would otherwise miss out on that opportunity.
+            </p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="pre-wrap lead"></p>
+            <p class="pre-wrap lead">
+              Spending 10+ years working in sales in a very public environment
+              gives you a lot of perspective on what customers and clients
+              struggle with and wish were easier. Those hurdles led me to start
+              building websites and developing apps with the hope of branching
+              my skills to a wider audience.
+            </p>
           </div>
         </div>
       </div>
@@ -399,15 +409,11 @@
             <h4 class="mb-4">AROUND THE WEB</h4>
             <a
               class="btn btn-outline-light btn-social mx-1"
-              href="https://www.facebook.com/StartBootstrap"
-              ><i class="fab fa-fw fa-facebook-f"></i></a
-            ><a
-              class="btn btn-outline-light btn-social mx-1"
-              href="https://www.twitter.com/sbootstrap"
+              href="https://www.twitter.com/bennythrash"
               ><i class="fab fa-fw fa-twitter"></i></a
             ><a
               class="btn btn-outline-light btn-social mx-1"
-              href="https://www.linkedin.com/in/startbootstrap"
+              href="https://www.linkedin.com/in/benrthrasher"
               ><i class="fab fa-fw fa-linkedin-in"></i></a
             ><a
               class="btn btn-outline-light btn-social mx-1"
