--- a/index.html
+++ b/index.html
@@ -346,14 +346,14 @@
         <!-- About Section Content-->
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="pre-wrap lead">
+            <p class="lead">
               I've always loved and been passionate about technology, especially
               it's ability to spread information and build accessibility for
               people who would otherwise miss out on that opportunity.
             </p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="pre-wrap lead">
+            <p class="lead">
               Spending 10+ years working in sales in a very public environment
               gives you a lot of perspective on what customers and clients
               struggle with and wish were easier. Those hurdles led me to start
