--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="container d-flex align-items-center flex-column">
         <!-- Masthead Avatar Image--><img
           class="masthead-avatar mb-5"
-          src="assets/img/avataaars (1).png"
+          src="assets/img/avataaars.png"
           alt=""
         />
         <!-- Masthead Heading-->
